[package]
name = "tg-image-hosting"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
frankenstein = { version = "0.45", features = ["client-reqwest"] }
serde = "1.0.228"
worker = { version = "0.6", features = ["d1"] }
worker-macros = "0.6"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2.101"
web-sys = { version = "0.3", features = ["console"] }
log = "0.4.28"
futures-core = "0.3.31"
bytes = "1.10.1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "stream",
    "multipart",
] }
futures-util = "0.3.31"
